# advent_of_code

./: .clang-format  .gitignore  README.md  clang-format-cmdline.txt  format_code.sh  format_files.ps1
aoc_2023/: CMakeLists.txt  compiler_flags.cmake
aoc_2023/src/: day_1.c  day_1.h  main.c  stdheaders.h
aoc_2023/src/day_1/: day_1.c  day_1.h
aoc_2024/: CMakeLists.txt
aoc_2024/src/: fileop.c  fileop.h  int_list.c  int_list.h  main.c
aoc_2024/src/day_1/: day_1.c  day_1.h
